--- a/ru/index.html
+++ b/ru/index.html
@@ -4860,7 +4860,7 @@
                                                                                     <span style="font-size: 18px;">
                                                                                         <span style="font-family: &quot;Raleway Medium&quot;;">
                                                                                             <span style="color: rgb(17, 118, 0);">Умный житель, получив 111% вполне может сделать вклад снова, и тогда проценты уже будут 111% + 2%. И так каждый раз каждое реинвестирование будет повышать %%% В принципе, очень умный житель может сделать даже несколько вкладов сразу. Но важно помнить, что для плавного роста проекта максимальный вклад ограничен 10 ETH!
-<p>Для последнего сделавшего вклад более 30 минут жителя есть бонус - 2% от всего оборота контракта!
+<p>Для последнего сделавшего вклад от 0.05 ETH более 20 минут жителя есть бонус!
 <p>Очередь жителей перезагружается каждый день в 20:00 по московскому времени.
 <p>Ставка повышающегося процента с каждым кругом реинвестирования: 111% за 1й, 113% за 2й, 117% за 3й, 121% за 4й, 125% за 5й, 130% за 6й, 135% за 7й, 141% за 8й круг</span>
                                                                                         </span>
